# pyChess

./: .gitignore  pyproject.toml
src/chess/core/board/: __init__.py  base.py  matrix.py  position.py  view.py
src/chess/core/datatypes/: Board.py  Color.py  Move.py  Pieces.py  Position.py  Square.py  __init__.py
src/chess/core/pieces/: __init__.py  base.py  bishop.py  king.py  pawn.py  queen.py  rook.py
src/chess/tui/: main.py
tests/: test_basic.py  test_board.py  test_pieces.py
