[project]
name = "chess"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "windows-curses>=2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]